--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Flask==2.3.3
 flask-cors==4.0.0
 face-recognition==1.3.0
-numpy==1.23.5
-opencv-python==4.8.1.78
+numpy==1.24.3
+opencv-python-headless==4.8.1.78
 psycopg2-binary==2.9.7
-pillow==10.0.0
+Pillow==10.0.0
 gunicorn==21.2.0
+cmake==3.27.7
+dlib==19.24.2
